--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.15",
+    "daisyui": "^3.6.1",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "^29.4.1",
